nominal categorical data

--- a/project.ipynb
+++ b/project.ipynb
@@ -268,7 +268,7 @@
     "\n",
     "Floating-point numbers are Continuous data types, which is a type of quantitative data (Pramoditha, 2020). These numeric values can take an infinite value within a certain range, which is different from discrete data which can only have distint values (Zangre, 2023). These are measured in ratio scale, which has equal intervals between values and has a true zero point (web.pdx.edu, n.d.). Probability distributions can only apply on these numerical columns sepal_length, sepal_width, petal_length and petal_width. \n",
     "\n",
-    "In mathematics, continuous data is the fundamental to calculus (Wikipedia, 2020a). A real number is a number that can be used to quantify a one dimensional continuous amount (Wikipedia, 2020b). These real numbers are used as inputs in real functions (Wikipedia, 2022), and according to Wikipedia Contributors (2019a), the general form of function is:\n",
+    "In mathematics, continuous data is the fundamental to calculus (Wikipedia, 2020a). A real number is a number that can be used to quantify a one dimensional continuous amount (Wikipedia, 2020b). These real numbers are used as inputs in real functions (Wikipedia, 2022b), and according to Wikipedia Contributors (2019a), the general form of function is:\n",
     "\n",
     "![Real Function](realfunction.png)\n",
     "\n",
@@ -286,7 +286,7 @@
     "\n",
     "In mathematics and statistics, the object datatype allows representation of various categories and subcategories for mathematical operations and statistical analysis. These can include sets, numbers and functions, each with its own characteristic, behaviour, and mathematical representation (Wikipedia, 2023). \n",
     "\n",
-    "Python language is object-oriented In Python (W3Schools, 2019a) that utilises objects and classes (GeeksforGeeks, 2016). \"Object datatype\" generally refers to the generic object type, which can represent any Python object, such as numbers (int, float, complex), lists, dictionaries, strings and boolean (Soklaski, 2021). These are types of classes which define a specific type of object (Silveira, 2022).\n",
+    "Python language is object-oriented In Python (W3Schools, 2019a) that utilises objects and classes (GeeksforGeeks, 2016). \"Object datatype\" generally refers to the generic object type, which can represent any Python object, such as numbers (int, float, complex), lists, dictionaries, strings and boolean (Soklaski, 2021, Sturtz, n.d.). These are types of classes which define a specific type of object (Silveira, 2022).\n",
     "\n",
     "#### 2.1.2.2 String\n",
     "\n",
@@ -296,16 +296,16 @@
     "\n",
     "In Python, string is used to store characters, usually text (Soklaski, 2021). According to Docs.python.org (n.d.), Python uses UTF-8 (Unicode Transformation Format, and 8-bitto encode) to represent various characters in string. It allows for data representation in a form of text which is crucial for various programming applications. Strings in Python are immutable, meaning once created, it becomes permanent (Google Developers, n.d.).\n",
     "\n",
-    "#### 2.1.2.3 Categorical Data\n",
+    "#### 2.1.2.3 Nominal Categorical Data\n",
+    "\n",
     "\n",
     "In this instance, it is a Categorical data type (non-numeric), which is a type of qualitative data, meaning it can only fall into a select group (Dettori and Norvell, 2018). It is a Nominal categorical variable, which is a type of categorical variable that represents categories or labels without specific order or ranking among them (Statistics Solutions, 2017). Because column 'class' is a nominal categorical variable, so no probability distributions are applicable.   \n",
     "\n",
-    "In mathematics\n",
+    "In mathematics, nominal categories are used in Set Theory to analyze union, intersections and difference among them (Wikipedia Contributors, 2019e).\n",
     "\n",
-    "In statistics\n",
+    "In statistics, nominal categorical data describes distinct qualities or groups within a dataset, such as gender, color and species. Analysis for nominal data includes Chi-Square Test of Goodness-of-Fit to assess the independence of nominal variables (McDonald, 2017) and Frequency Distribution which shows the observation count in each group (Wikipedia, 2022a).  \n",
     "\n",
-    "In Python\n",
-    "\n"
+    "In Python, visualization libraries such as Matplotlib and Seaborn offer functions to generate plots for data exploration and visualisation of nominal categorical data, such as count plots (Waskom, 2012, Matplotlib.org, n.d.) and categorical scatter plots (Pydata.org, 2012). Also, Python's statistical libraries such as SciPy (Docs.scipy.org, n.d.) and StatsModels (www.statsmodels.org, n.d.) provide functions to test nominal variables."
    ]
   },
   {
