--- a/project.ipynb
+++ b/project.ipynb
@@ -642,9 +642,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One option is to pick the lowest RSS value from the output above to select the best-fitting probability distribution for each attribute. To better visualize the data, Distribution Plots were generated using Matplotlib (Matplotlib.pyplot.subplots, n.d.). \n",
+    "One option is to pick the lowest RSS value from the output above to select the best-fitting probability distribution for each attribute. To visualize the data better, Distribution Plots were generated using Matplotlib (Matplotlib.pyplot.subplots, n.d.). \n",
     "\n",
-    "In the Distribution Plots, fig.tight_layout was used to adjust spacing between the subplots according to GeeksforGeeks spacing (2020. )Spacing between subplots and title (y=1.01) were adjusted according to Ceylan (2018)."
+    "In the Distribution Plots, fig.tight_layout was used to adjust spacing between the subplots according to GeeksforGeeks spacing (2020). Spacing between subplots and title (y=1.01) were adjusted according to Ceylan (2018)."
    ]
   },
   {
