tidy up repository

--- a/project.ipynb
+++ b/project.ipynb
@@ -326,102 +326,8 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sepal_length</th>\n",
-       "      <th>sepal_width</th>\n",
-       "      <th>petal_length</th>\n",
-       "      <th>petal_width</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>150.000000</td>\n",
-       "      <td>150.000000</td>\n",
-       "      <td>150.000000</td>\n",
-       "      <td>150.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>5.843333</td>\n",
-       "      <td>3.054000</td>\n",
-       "      <td>3.758667</td>\n",
-       "      <td>1.198667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>0.828066</td>\n",
-       "      <td>0.433594</td>\n",
-       "      <td>1.764420</td>\n",
-       "      <td>0.763161</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>4.300000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.100000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>5.100000</td>\n",
-       "      <td>2.800000</td>\n",
-       "      <td>1.600000</td>\n",
-       "      <td>0.300000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>5.800000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>4.350000</td>\n",
-       "      <td>1.300000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>6.400000</td>\n",
-       "      <td>3.300000</td>\n",
-       "      <td>5.100000</td>\n",
-       "      <td>1.800000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>7.900000</td>\n",
-       "      <td>4.400000</td>\n",
-       "      <td>6.900000</td>\n",
-       "      <td>2.500000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       sepal_length  sepal_width  petal_length  petal_width\n",
-       "count    150.000000   150.000000    150.000000   150.000000\n",
-       "mean       5.843333     3.054000      3.758667     1.198667\n",
-       "std        0.828066     0.433594      1.764420     0.763161\n",
-       "min        4.300000     2.000000      1.000000     0.100000\n",
-       "25%        5.100000     2.800000      1.600000     0.300000\n",
-       "50%        5.800000     3.000000      4.350000     1.300000\n",
-       "75%        6.400000     3.300000      5.100000     1.800000\n",
-       "max        7.900000     4.400000      6.900000     2.500000"
+       "'\\nsepal_length_stats = df[\\'sepal_length\\'].describe()\\nprint(\"Sepal Length Summary Statistics:\\n\", sepal_length_stats)\\n\\nsepal_length_stats = df[\\'sepal_depth\\'].describe()\\nprint(\"Sepal Length Summary Statistics:\\n\", sepal_length_stats)\\n\\nsepal_length_stats = df[\\'petal_length\\'].describe()\\nprint(\"Sepal Length Summary Statistics:\\n\", sepal_length_stats)\\n\\nsepal_length_stats = df[\\'petal_depth\\'].describe()\\nprint(\"Sepal Length Summary Statistics:\\n\", sepal_length_stats)\\n'"
       ]
      },
      "execution_count": 4,
@@ -606,7 +512,7 @@
     "\n",
     "The Kernel Density Estimation (KDE) is used to to estimate the probability density function of a random variable by using the kernel (smoothing function) at each data point and to create a smooth curve to perform estimates (Drapala, 2023). According to Wikipedia Contributors (2019e), the kernel density estimator formula is as follows:\n",
     "\n",
-    "![kde.png](kde.png)\n",
+    "![kde](fundaw23/img/kde.png)\n",
     "\n",
     "where f(x) is the kernel density estimator for the random variable x, n is the number of data points, h is the bandwidth (smoothing parameter), x<sub>i</sub> is individual data points and K is the kernel function.\n",
     "\n",
@@ -615,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
