mean, outlier, human error

--- a/project.ipynb
+++ b/project.ipynb
@@ -58,7 +58,7 @@
     "\n",
     "The problem of species differentiation within the genus Iris has long been discussed, especially between *I. versicolor* and *I. virginica* (Anderson, 1928, 1936). Molecular studies have been done to determine chromosomal numbers of different native and introduced Iris species as early as 1934 (Randolph, 1934). \n",
     "\n",
-    "The Iris dataset was introduced by the British biologist and statistician Ronald A. Fisher in his paper to describe linear discriminant analysis published in 1936 (Wikipedia Contributors, 2019d). The flowers were collected from  Gaspé Peninsula in Canada (Anderson, 1935) and multiple locatins from Central to Northern USA (Anderson, 1928, 1936). The dataset became famous because it provides a well-defined problem in the field of pattern recognition and machine learning and has become a reliable benchmark for testing and comparing different machine learning algorithms, particularly those involved in classification tasks (Lundy, 2023).\n",
+    "The Iris dataset was introduced by the British biologist and statistician Ronald A. Fisher in his paper to describe linear discriminant analysis published in 1936 (Wikipedia Contributors, 2019e). The flowers were collected from  Gaspé Peninsula in Canada (Anderson, 1935) and multiple locatins from Central to Northern USA (Anderson, 1928, 1936). The dataset became famous because it provides a well-defined problem in the field of pattern recognition and machine learning and has become a reliable benchmark for testing and comparing different machine learning algorithms, particularly those involved in classification tasks (Lundy, 2023).\n",
     "\n",
     "In this genus, the color attribute is probably unreliable because of color polymorphism within the species or population. When coupled with phylogenetic studies which identifies the species and their closely-related species and common ancestors, it would become a powerful tool for taxonomists and researchers."
    ]
@@ -267,7 +267,7 @@
     "\n",
     "where f is the name of the function, D is the domain of the function, and R is the codomain of the function, which is the set of real numbers.\n",
     "\n",
-    "In statistics, continuous data often follows probability distributions and can be expressed as probability density functions  which describe all the possible values and the likelihood of these values occurring within a range (Wikipedia Contributors, 2019f). Continuous data is commonly used in regression analysis, which studies the relationship between one or more independent variables and a dependent variable, as well as predictive modeling (AVcontentteam, 2020). Continuous data also provides more accuracy in observations to make statistical inferences (Minitab Blog Editor, n.d.). \n",
+    "In statistics, continuous data often follows probability distributions and can be expressed as probability density functions  which describe all the possible values and the likelihood of these values occurring within a range (Wikipedia Contributors, 2019g). Continuous data is commonly used in regression analysis, which studies the relationship between one or more independent variables and a dependent variable, as well as predictive modeling (AVcontentteam, 2020). Continuous data also provides more accuracy in observations to make statistical inferences (Minitab Blog Editor, n.d.). \n",
     "\n",
     "In Python, libraries like NumPy (Numpy.org, n.d.) and Pandas (Pandas.pydata.org, n.d.) provide robust tools for working with continuous data (GeeksforGeeks, 2021a). Scikit-Learn provides tools for preprocessing, model training, and evaluation of models, often using continuous data in Python (Scikit-learn, 2019). The SciPy library in Python contains various statistical analysis and functions for various types of data, including continuous data (Scipy.org, 2019). \n",
     "\n",
@@ -277,7 +277,7 @@
     "\n",
     "From the output, the column 'class' in the Iris dataset is an object. \n",
     "\n",
-    "In mathematics and statistics, the object datatype allows representation of various categories and subcategories for mathematical operations and statistical analysis. These can include sets, numbers and functions, each with its own characteristic, behaviour, and mathematical representation (Wikipedia Contributors, 2019g). \n",
+    "In mathematics and statistics, the object datatype allows representation of various categories and subcategories for mathematical operations and statistical analysis. These can include sets, numbers and functions, each with its own characteristic, behaviour, and mathematical representation (Wikipedia Contributors, 2019h). \n",
     "\n",
     "Python language is object-oriented In Python (W3Schools, 2019a) that utilises objects and classes (GeeksforGeeks, 2016). \"Object datatype\" generally refers to the generic object type, which can represent any Python object, such as numbers (int, float, complex), lists, dictionaries, strings and boolean (Soklaski, 2021, Sturtz, n.d.). These are types of classes which define a specific type of object (Silveira, 2022).\n",
     "\n",
@@ -444,30 +444,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Select, demonstrate, and explain the most appropriate summary statistics to describe each variable.\n",
-    "\n",
     "### 2.2.1 sepal_length\n",
     "\n",
     "#### 2.2.1.1 Count\n",
     "\n",
-    "Count is the number of non-null (non-missing) values. Column sepal_length shows that it has 150 values in 150 rows. Non-null values are important for accurate and meaningful data analysis and results because they provide a complete picture of the dataset. Both missing data and inputting missing data can cause bias or error in data analysis, thus leading to incorrect conclusions (www.linkedin.com, 2023). \n",
+    "Count is the number of non-null (non-missing) values. Column sepal_length shows that it is complete with 150 values in 150 rows. \n",
+    "\n",
+    "Non-null values are important for accurate and meaningful data analysis and results because they provide a complete picture of the dataset. Both missing data and inputting missing data can cause bias or error in data analysis, thus leading to incorrect conclusions (www.linkedin.com, 2023a). \n",
     "\n",
     "In Python, non-null values are important to create accurate visual representation to allow us to better visualise and understand patterns and trends. Some Python package, such as distfit does not handle missing values well and will produce error when used. \n",
     "\n",
-    "In machine learning, missing values can create challenges during model training and prediction (Rios et al., 2022). In the era of big data, the enormity and complexity of data have made it difficult for traditional machine learning methods to deal with missing data Qiu et al. (2016). \n",
-    "According to Emmanuel et al. (2021), there is no best data imputation method because the accuracy of machine learning imputation algorithm significantly depends on the data itself. \n",
+    "In machine learning, missing values can create challenges during model training and prediction, because most algorithms require complete data for training (Rios et al., 2022). In the era of big data, the enormity and complexity of data have made it difficult for traditional machine learning methods to deal with missing data (Qiu et al., 2016). According to Emmanuel et al. (2021), there is no best method to impute data because the accuracy of machine learning imputation algorithm significantly depends on the data itself. \n",
     "\n",
     "#### 2.2.1.2 Mean\n",
     "\n",
-    "average value and provides a measure of central tendency.\n",
+    "Mean is the average value, which is a quick and easy way to summarize data. It provides a measure of central tendency, which pinpoints the middle position within the dataset (Laerd Statistics, 2018). It serves as a point of balance in a distribution, when the minimum and maximum values are equidistant from the mean (www.khanacademy.org, n.d.). \n",
+    "\n",
+    "From the output, the mean for column sepal_length is 5.84 mm with the range between 4.30mm to 7.90mm. It is considered a sample mean, and not a population mean, because it is a measurement of a representative subset of a small number of the population (Ravikiran, 2021). \n",
+    "\n",
+    "Because mean is vulnerable to the effect of outliers, it is used when the variable is not skewed, or when the data is nominal (Laerd Statistics, 2018). Mean values are used in various statistical formulas, including variance, standard deviation, and correlation. \n",
     "\n",
     "#### 2.2.1.3 Std (Standard Deviation)\n",
     "\n",
     "amount of variation or dispersion of a set of values.\n",
     "\n",
+    "The standard deviation for sepal_length is 0.83\n",
+    "\n",
     "#### 2.2.1.4 Min\n",
     "\n",
-    "minimum values observed.\n",
+    "The minimum value observed for sepal_length is 4.3mm\n",
     "\n",
     "#### 2.2.1.5 25% Quartile\n",
     "\n",
@@ -475,7 +480,9 @@
     "\n",
     "#### 2.2.1.6 50% Quartile (median)\n",
     "\n",
+    "(Laerd Statistics, 2018)\n",
     "\n",
+    "use median when the variable is ordinal or skewed (Laerd Statistics, 2018).\n",
     "\n",
     "#### 2.2.1.7 75% Quartile\n",
     "\n",
@@ -489,19 +496,19 @@
     "\n",
     "#### 2.2.2.1 Count\n",
     "\n",
-    "number of non-null (non-missing) values for each variable.\n",
+    "Column sepal_depth shows that it is complete with 150 values in 150 rows. \n",
     "\n",
     "#### 2.2.2.2 Mean\n",
     "\n",
-    "average value and provides a measure of central tendency.\n",
+    "From the output, the mean for column sepal_depth is 3.05mm with the range between 2.0mm to 4.4mm. \n",
     "\n",
     "#### 2.2.2.3 Std (Standard Deviation)\n",
     "\n",
-    "amount of variation or dispersion of a set of values.\n",
+    "The standard deviation for sepal_depth is 0.43\n",
     "\n",
     "#### 2.2.2.4 Min\n",
     "\n",
-    "minimum values observed.\n",
+    "The minimum value observed for sepal_depth is 2.0mm\n",
     "\n",
     "#### 2.2.2.5 25% Quartile\n",
     "\n",
@@ -523,19 +530,19 @@
     "\n",
     "#### 2.2.3.1 Count\n",
     "\n",
-    "number of non-null (non-missing) values for each variable.\n",
+    "Column petal_length shows that it is complete with 150 values in 150 rows. \n",
     "\n",
     "#### 2.2.3.2 Mean\n",
     "\n",
-    "average value and provides a measure of central tendency.\n",
+    "The mean for column petal_length is 3.76mm with big range between 1.0mm to 6.9mm. \n",
     "\n",
     "#### 2.2.3.3 Std (Standard Deviation)\n",
     "\n",
-    "amount of variation or dispersion of a set of values.\n",
+    "The standard deviation for petal_length is 1.76mm\n",
     "\n",
     "#### 2.2.3.4 Min\n",
     "\n",
-    "minimum values observed.\n",
+    "The minimum value observed for petal_length is 1.0mm\n",
     "\n",
     "#### 2.2.3.5 25% Quartile\n",
     "\n",
@@ -557,19 +564,27 @@
     "\n",
     "#### 2.2.4.1 Count\n",
     "\n",
-    "number of non-null (non-missing) values for each variable.\n",
+    "Column petal_depth shows that it is complete with 150 values in 150 rows. \n",
     "\n",
     "#### 2.2.4.2 Mean\n",
     "\n",
-    "average value and provides a measure of central tendency.\n",
+    "The mean for column petal_depth is 1.20mm with the range between 0.1mm to 2.50mm. \n",
     "\n",
     "#### 2.2.4.3 Std (Standard Deviation)\n",
     "\n",
-    "amount of variation or dispersion of a set of values.\n",
+    "The standard deviation for petal_depth is 0.76mm\n",
     "\n",
     "#### 2.2.4.4 Min\n",
     "\n",
-    "minimum values observed.\n",
+    "The minimum value observed for petal_depth is 0.1mm, which is extremely small. One could argue that this is an outlier or simply human error.\n",
+    "\n",
+    "##### 2.2.4.4.1 Outliers\n",
+    "\n",
+    "According to Engineering Statistics Handbook (2019), outliers are observations that stand out because they are abnormally far from the rest of the data in a dataset. Outliers can potentially skew statistical analyses and key statistical calculations such as mean and standard deviation are particularly susceptible to it. Choosing the appropriate methods for outlier detection and treatment depends on the data itself and the objectives of the analysis www.linkedin.com (2023b).\n",
+    "\n",
+    "##### 2.2.4.4.1 Human Error\n",
+    "\n",
+    "According to Wikipedia Contributors (2019d), human error is an accidental action and oversight that leads to extreme values that deviate away from acceptable limits. In statistics and Python, it is a serious mistake that compromises result accuracy, analysis validity, flawed conclusions, and unreliable applications. Examples of human error include data collection error, data entry error and human bias. These can be easily identified as points that lie far from the main cluster when data is plotted. \n",
     "\n",
     "#### 2.2.4.5 25% Quartile\n",
     "\n",
@@ -601,7 +616,7 @@
     "\n",
     "Histogram (Wikipedia Contributors, 2019c)(Chen, 2022)\n",
     "\n",
-    "The Kernel Density Estimation (KDE) is used to to estimate the probability density function of a random variable by using the kernel (smoothing function) at each data point and to create a smooth curve to perform estimates (Drapala, 2023). According to Wikipedia Contributors (2019e), the kernel density estimator formula is as follows:\n",
+    "The Kernel Density Estimation (KDE) is used to to estimate the probability density function of a random variable by using the kernel (smoothing function) at each data point and to create a smooth curve to perform estimates (Drapala, 2023). According to Wikipedia Contributors (2019f), the kernel density estimator formula is as follows:\n",
     "\n",
     "![kde](img/kde.png)\n",
     "\n",
