--- a/project.ipynb
+++ b/project.ipynb
@@ -460,15 +460,27 @@
     "\n",
     "Mean is the average value, which is a quick and easy way to summarize data. It provides a measure of central tendency, which pinpoints the middle position within the dataset (Laerd Statistics, 2018). It serves as a point of balance in a distribution, when the minimum and maximum values are equidistant from the mean (www.khanacademy.org, n.d.). \n",
     "\n",
-    "From the output, the mean for column sepal_length is 5.84 mm with the range between 4.30mm to 7.90mm. It is considered a sample mean, and not a population mean, because it is a measurement of a representative subset of a small number of the population (Ravikiran, 2021). \n",
+    "According to StatisticsHowTo.com (n.d.), the formula for sample mean is:\n",
+    "\n",
+    "![sample Mean](img/samplemean.png)\n",
+    "\n",
+    "where $\\bar{x}$ is the sample mean, $\\Sigma$ is the summation notation, x<sub>i</sub>​ is the observed values of a sample and n is the the number of observations.\n",
+    "\n",
+    "From the output, the mean for column sepal_length is 5.84 with the range between 4.30mm to 7.90mm. It is considered a sample mean, and not a population mean, because it is a measurement of a representative subset of a small number of the population (Ravikiran, 2021). \n",
     "\n",
     "Because mean is vulnerable to the effect of outliers, it is used when the variable is not skewed, or when the data is nominal (Laerd Statistics, 2018). Mean values are used in various statistical formulas, including variance, standard deviation, and correlation. \n",
     "\n",
     "#### 2.2.1.3 Std (Standard Deviation)\n",
     "\n",
-    "amount of variation or dispersion of a set of values.\n",
+    "According to Wikipedia Contributors (2019i), standard deviation is how far the data is spread around the mean, with low value indicating that data is concentrated close to the mean and high value indicating that data is spread out. The empirical rule 68–95–99.7 in a Normal distribution states that 68%, 95%, and 99.7% of the data falls within one, two and three standard deviation of the mean, respectively. The standard deviation for sepal_length is 0.83mm, suggesting that data is clustered close to the mean.\n",
     "\n",
-    "The standard deviation for sepal_length is 0.83\n",
+    "According to www.ncl.ac.uk (n.d.), the Sample Standard Deviation formula is:\n",
+    "\n",
+    "![Sample Standard Deviation](img/samplestd.png)\n",
+    "\n",
+    "where s is sample standard deviation, $\\Sigma$ is the summation notation, x<sub>i</sub>​ is the observed values of a sample, $\\bar{x}$ is the sample mean, and N is the the number of observations.\n",
+    "\n",
+    "Standard deviation is used to assess the variability of features in predictive models in machine learning.\n",
     "\n",
     "#### 2.2.1.4 Min\n",
     "\n",
@@ -480,7 +492,7 @@
     "\n",
     "#### 2.2.1.6 50% Quartile (median)\n",
     "\n",
-    "(Laerd Statistics, 2018)\n",
+    "As the difference between the median and mean increases, the more skewed the distribution becomes, and in such situation, using median is preferred.  (Laerd Statistics, 2018).\n",
     "\n",
     "use median when the variable is ordinal or skewed (Laerd Statistics, 2018).\n",
     "\n",
@@ -500,11 +512,11 @@
     "\n",
     "#### 2.2.2.2 Mean\n",
     "\n",
-    "From the output, the mean for column sepal_depth is 3.05mm with the range between 2.0mm to 4.4mm. \n",
+    "From the output, the mean for column sepal_depth is 3.05 with the range between 2.0mm to 4.4mm. \n",
     "\n",
     "#### 2.2.2.3 Std (Standard Deviation)\n",
     "\n",
-    "The standard deviation for sepal_depth is 0.43\n",
+    "The standard deviation for sepal_depth is 0.43, suggesting that data is clustered close to the mean. \n",
     "\n",
     "#### 2.2.2.4 Min\n",
     "\n",
@@ -534,11 +546,11 @@
     "\n",
     "#### 2.2.3.2 Mean\n",
     "\n",
-    "The mean for column petal_length is 3.76mm with big range between 1.0mm to 6.9mm. \n",
+    "The mean for column petal_length is 3.76 with big range between 1.0mm to 6.9mm. \n",
     "\n",
     "#### 2.2.3.3 Std (Standard Deviation)\n",
     "\n",
-    "The standard deviation for petal_length is 1.76mm\n",
+    "The standard deviation for petal_length is 1.76mm, suggesting that data is more spread out over a wide range.\n",
     "\n",
     "#### 2.2.3.4 Min\n",
     "\n",
@@ -568,11 +580,11 @@
     "\n",
     "#### 2.2.4.2 Mean\n",
     "\n",
-    "The mean for column petal_depth is 1.20mm with the range between 0.1mm to 2.50mm. \n",
+    "The mean for column petal_depth is 1.20 with the range between 0.1mm to 2.50mm. \n",
     "\n",
     "#### 2.2.4.3 Std (Standard Deviation)\n",
     "\n",
-    "The standard deviation for petal_depth is 0.76mm\n",
+    "The standard deviation for petal_depth is 0.76mm, suggesting that data is spread out.\n",
     "\n",
     "#### 2.2.4.4 Min\n",
     "\n",
