--- a/project.ipynb
+++ b/project.ipynb
@@ -484,7 +484,9 @@
     "\n",
     "#### 2.2.1.4 Min\n",
     "\n",
-    "The minimum value observed for sepal_length is 4.3mm\n",
+    "Min is the smallest value in a dataset. The lowest value observed for sepal_length is 4.3mm. \n",
+    "\n",
+    "It provides information about the lower end of the data distribution in range calculation to see the spread of the data. This extremely low value could possibly indicate that it is an outlier if it falls outside an expected (Cowley, 2021). When plotting data for data visualisation, the smallest value helps set the scales on the plot to ensure that all are represented.\n",
     "\n",
     "#### 2.2.1.5 25% Quartile\n",
     "\n",
@@ -502,6 +504,9 @@
     "\n",
     "#### 2.2.1.8 Max\n",
     "\n",
+    "Max is the highest value in a dataset. The highest value observed for sepal_length is 7.9mm. \n",
+    "\n",
+    "In range calculation, it provides information about the lower end of the data distribution to see the spread of the data. This extremely high value could possibly indicate that it is an outlier if it falls outside a valid range (Cowley, 2021). When plotting data, the highest value helps to set the scales on the plot to ensure that all are represented for data visualisation.\n",
     "\n",
     "\n",
     "### 2.2.2 sepal_depth\n",
