--- a/project.ipynb
+++ b/project.ipynb
@@ -492,27 +492,27 @@
     "\n",
     "#### 2.2.1.5 25% Quartile\n",
     "\n",
-    "Quartiles divide the data into four equal parts. According to Wikipedia (2021), 25% of data lies below the first/lower quartile (Q<sub>1</sub>), 50% of data lies below the second quartile (Q<sub>2</sub>) and 75% of data lies below the the third/upper quartile (Q<sub>3</sub>). From a statistical standpoint, it indicates the spread of the data and whether it is skewed or otherwise (Wikipedia, 2021). \n",
+    "Quartiles divide the data into four equal parts. According to Wikipedia (2021), 25% of data lies below the first/lower quartile (Q<sub>1</sub>), 50% of data lies below the second quartile (Q<sub>2</sub>) and 75% of data lies below the the third/upper quartile (Q<sub>3</sub>). From a statistical standpoint, it indicates the spread of the data, presence of outliers and whether it is skewed or otherwise (Wikipedia, 2021). \n",
     "\n",
-    "The lower quartile for column sepal_length is \n",
+    "The lower quartile for column sepal_length is 5.1mm. Because 25th percentile describes the spread of the lower portion of a dataset, this means that 25% of the data is below 5.1mm, while the rest of the data (the highest 75%) is above 5.1mm. If the lower quartile is farther from the median than the upper quartile, this indicates a negatively-skewed distribution or left-skewed, where the smaller values are more dispersed wit a longer tail and the larger values are more concentrated on the right (Taylor, 2022a, Turney, 2022). Also, if a data point falls significantly below this first quartile, it may be a potential outlier.\n",
     "\n",
     "#### 2.2.1.6 50% Quartile (median)\n",
     "\n",
-    "As the difference between the median and mean increases, the more skewed the distribution becomes, and in such situation, using median is preferred.  (Laerd Statistics, 2018).\n",
+    "The median is the measure of tendency that divides a dataset into two equal parts when data is arranged from lowest to highest (Liberto, 2019). The median is used when the variable is ordinal or skewed (Laerd Statistics, 2018). As the difference between the median and mean increases, the more skewed the distribution becomes, and in such situation, the use of median is preferred (Laerd Statistics, 2018). According to LibreTexts Statistics (2019), a perfectly symmetrical distribution would have the same median and mean values, however, if the mean is less than median, the distribution is left-skewed and if the mean is more than the median, it is right-skewed. The median is also less sensitive to extreme values (outliers) than the mean (Australian Bureau of Statistics, 2023). \n",
     "\n",
-    "use median when the variable is ordinal or skewed (Laerd Statistics, 2018).\n",
-    "\n",
-    "The median for column sepal_length is\n",
+    "The median for column sepal_length is 5.8mm, while the mean is 5.84, thus indicating that the distribution is slightly skewed to the right (positively-skewed).\n",
     "\n",
     "#### 2.2.1.7 75% Quartile\n",
     "\n",
-    "The upper quartile for sepal_length is\n",
+    "The 75th percentile describes the spread of the upper portion of a dataset. The upper quartile for sepal_length is 6.4mm. Because the 75% Quartile separates the highest 25% of data from the lowest 75%, this means that 75% of the data is below 6.4mm, while the rest of the data (the highest 25%) is above 6.4mm. \n",
+    "\n",
+    "If the upper quartile is farther from the median than the lower quartile, this indicates a positively-skewed distribution or right-skewed, where the bigger values are more dispersed with a longer tail and the smaller values are more clustered on the left (Taylor, 2022b, Turney, 2022). Also, if a data point reaches significantly above this third quartile, it may be a potential outlier.\n",
     "\n",
     "#### 2.2.1.8 Max\n",
     "\n",
-    "Max is the highest value in a dataset. The maximum value observed for sepal_length is 7.9mm. \n",
+    "Max is the largest value in a dataset. The maximum value observed for sepal_length is 7.9mm. \n",
     "\n",
-    "In range calculation, it provides information about the upper end of the data distribution to see the spread of the data. This extremely high value could possibly indicate that it is an outlier if it falls outside a valid range (Cowley, 2021). When plotting data, the maximum value helps to set the scales on the plot to ensure that all are represented for data visualisation.\n",
+    "In range calculation, it provides information about the upper end of the data distribution to see the spread of the data. This extremely high value could possibly indicate that it is an outlier if it falls outside a valid range (Cowley, 2021). When plotting data, the maximum value helps to set the appropriate scales on the plot to ensure that all are accurately represented for data visualisation.\n",
     "\n",
     "### 2.2.2 sepal_width\n",
     "\n",
@@ -534,15 +534,15 @@
     "\n",
     "#### 2.2.2.5 25% Quartile\n",
     "\n",
-    "The lower quartile for column sepal_width is \n",
+    "The lower quartile for column sepal_width is 2.8.\n",
     "\n",
     "#### 2.2.2.6 50% Quartile (median)\n",
     "\n",
-    "The The median for column sepal_width is\n",
+    "The The median for column sepal_width is 3.\n",
     "\n",
     "#### 2.2.2.7 75% Quartile\n",
     "\n",
-    "The upper quartile for sepal_width is\n",
+    "The upper quartile for sepal_width is 3.3.\n",
     "\n",
     "#### 2.2.2.8 Max\n",
     "\n",
@@ -568,15 +568,15 @@
     "\n",
     "#### 2.2.3.5 25% Quartile\n",
     "\n",
-    "The lower quartile for column petal_length is \n",
+    "The lower quartile for column petal_length is 1.6.\n",
     "\n",
     "#### 2.2.3.6 50% Quartile (median)\n",
     "\n",
-    "The The median for column petal_length is\n",
+    "The The median for column petal_length is 4.35.\n",
     "\n",
     "#### 2.2.3.7 75% Quartile\n",
     "\n",
-    "The upper quartile for petal_length is\n",
+    "The upper quartile for petal_length is 5.1.\n",
     "\n",
     "#### 2.2.3.8 Max\n",
     "\n",
@@ -610,16 +610,16 @@
     "\n",
     "#### 2.2.4.5 25% Quartile\n",
     "\n",
-    "The lower quartile for column petal_width is \n",
+    "The lower quartile for column petal_width is 0.3.\n",
     "\n",
     "\n",
     "#### 2.2.4.6 50% Quartile (median)\n",
     "\n",
-    "The The median for column petal_width is\n",
+    "The The median for column petal_width is 1.3.\n",
     "\n",
     "#### 2.2.1.7 75% Quartile\n",
     "\n",
-    "The upper quartile for petal_width is\n",
+    "The upper quartile for petal_width is 1.8.\n",
     "\n",
     "#### 2.2.1.8 Max\n",
     "\n",
